--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body data-spy="scroll" data-target="#primary-menu">
 
 <table align = "center", border = "0">
-<tr><td align="center"><img src="logo.JPG" ></td><tr>
+<tr><td align="center"><img src="logo.jpg" ></td><tr>
 <tr><td><font size="8" color="Blue" >Energy Solutions & Services</font></td><tr>
 <tr><td align="center"><font size="5" color="orange" ><a href="tel:+918007552123">+918007552123</a></font></td><tr>
 <tr><td align="center"><font size="5" color="orange" ><a href="mailto:solastasustain@gmail.com">solastasustain@gmail.com</a></font></td><tr>
