--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
           <div class="wow fadeInUp" data-wow-delay="0.3s">
              <p></p>
              <p class="copyright-text">Copyright &copy; 2018 SOLASTA <br>
-             Designed by <a rel="nofollow" href="https://twitter.com/iroshankedar" target="_parent">Roshan Kedar</a></p>
+             Designed by <a rel="nofollow" href="https://twitter.com/iroshankedar" target="_parent">Roshan Kedar</a> 
+		     and <a rel="nofollow" href="https://in.linkedin.com/in/harshad-bhangale-b41961a0" target="_parent">Harshad Bhangale</a></p>
           </div>
       </div>
 
